Fixed layout issue in mobile

--- a/src/app/pages/footer/footer.component.scss
+++ b/src/app/pages/footer/footer.component.scss
@@ -110,3 +110,10 @@ footer {
     }
 }
 
+@media (max-width: $mobile) {
+    footer {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+
