--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -312,7 +312,8 @@
 @media (max-width: $mobile) {
     #services {
         .section-1 {
-
+            padding-bottom: 0;
+            
             & > div {
                 padding: 10px;
 
