--- a/src/app/pages/team/team.component.scss
+++ b/src/app/pages/team/team.component.scss
@@ -1428,13 +1428,17 @@
             }
 
             .plain {
+                padding-top: 0;
+
                 .image-border {
                     .content {
                         .image {
                             width: 100%;
+                            height: 375px;
 
                             img {
                                 width: 100%;
+                                position: initial
                             }
                         }
                     }
